# VocDenoiser

./: .gitignore  LICENSE  README.md  SPECS.md  pyproject.toml
.claude/skills/noise-recipe/: SKILL.md
.claude/skills/scaffold-project/: SKILL.md
notebooks/: colab_driver.ipynb
reports/: search_findings.md  snr_report.md  snr_validation.md  snr_validation_by_type.md
src/vocdenoiser/: __init__.py  audio.py  cli.py
src/vocdenoiser/datasets/: __init__.py  infantmarmosetsvox.py  marmaudio.py  quality.py  resample.py
src/vocdenoiser/denoise/: __init__.py  augment.py  beta_vae.py  config.py  dataset.py  eval.py  train.py
src/vocdenoiser/search/: __init__.py  accept.py  harness.py  ledger.py  loop.py  metric.py  model_factory.py  program.md  propose.py  report.py  space.py
src/vocdenoiser/snr/: __init__.py  metric.py  report.py  scan.py  select.py  threshold.py  validate.py
tests/: test_config.py  test_datasets.py  test_search.py  test_shapes.py  test_snr.py
