[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vocdenoiser"
version = "0.1.0"
description = "Denoising + compression of marmoset vocalizations (SNR filtering, conv/β-VAE denoiser, autoresearch-style architecture search)."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "kalleknast" }]

# The SNR filtering pipeline depends on numpy ONLY (plus the stdlib) so it runs
# anywhere, including a bare Python install with no scientific stack.
dependencies = ["numpy>=1.24"]

[project.optional-dependencies]
# Nicer reports (PNG histograms). Falls back to text/markdown if absent.
report = ["matplotlib>=3.7"]
# Model training + architecture search. GPU/Colab territory.
ml = [
    "torch>=2.1",
    "torchaudio>=2.1",
    "lightning>=2.2",
    "scikit-learn>=1.3",
    "umap-learn>=0.5",
    "matplotlib>=3.7",
]
# Optional hyperparameter search backends for the continuous knobs.
search = ["optuna>=3.4"]
# Anti-aliased polyphase resampling for the dataset downsampler / external
# loaders (falls back to torchaudio when the ml extra is installed).
resample = ["scipy>=1.10"]
dev = ["pytest>=7", "ruff>=0.4"]

[project.scripts]
vocdenoiser = "vocdenoiser.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
